[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "colorama>=0.4.6",
    "crypto>=1.4.1",
    "flask>=3.1.3",
    "psutil>=7.2.2",
    "pytelegrambotapi>=4.31.0",
    "pytz>=2025.2",
    "requests>=2.32.5",
    "rich>=14.3.3",
    "urllib3>=2.6.3",
]
